--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1061,8 +1061,8 @@ body {
 .workflow-card {
   width: 100%;
   max-width: 530px;
-  height: 630px;
-  min-height: 630px;
+  height: 130px;
+  min-height: 540px;
   position: relative;
   flex-shrink: 0;
   box-sizing: border-box;
@@ -1337,8 +1337,9 @@ body {
 }
 
 .workflow-preview-container {
-  width: 100%;
-  height: 265.4529113769531px;
+  width: 650px;
+  height: 675.4529113769531px;
+  /* height: 265px; */
   border: 0px;
   border-radius: 0px;
   position: relative;
@@ -1350,19 +1351,19 @@ body {
 /* Mobile responsive untuk workflow preview */
 @media (max-width: 768px) {
   .workflow-preview-container {
-    height: 180px;
+    /* height: 180px; */
   }
 }
 
 @media (max-width: 640px) {
   .workflow-preview-container {
-    height: 160px;
+    /* height: 160px; */
   }
 }
 
 @media (max-width: 480px) {
   .workflow-preview-container {
-    height: 120px;
+    /* height: 120px; */
   }
 }
 
