--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -218,7 +218,18 @@ h1 {
   font-weight: 400;
   font-style: Regular;
   font-size: 1.25rem !important;
-  letter-spacing: -1%;
+  line-height: 150% !important;
+  letter-spacing: -1% !important;
+}
+
+.paragraph-17-regulertext-white\/80 {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 1.25rem !important;
+  line-height: 150% !important;
+  letter-spacing: -1% !important;
+  color: rgba(255, 255, 255, 0.8) !important;
 }
 
 .desc-hero-screen {
